--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     muted 
     loop 
     playsinline 
-    style="width:100%; height:220px; object-fit:cover;">
+    style="width:100%; height:auto; max-height:400px; object-fit:contain;">
   </video>
 
   <div class="product-info">
