Update product link to new Amazon URL

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <div class="product-info">
     <h3>Movado</h3>
     <p>Movado Bold Quest Automatic Watch, Swiss Self-Winding Movement, Stainless Steel Bracelet 39mm</p>
-    <a href="https://example.com/product1" target="_blank">Buy Now</a>
+    <a href="https://amzn.to/44Tes3Y" target="_blank">Buy Now</a>t
   </div>
 </div>
 
