--- a/index.html
+++ b/index.html
@@ -37,6 +37,36 @@
     opacity: 0.85;
   }
 
+  /* Navigation Bar */
+  nav {
+    background: #000;
+    padding: 15px 0;
+    text-align: center;
+  }
+
+  nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  nav ul li {
+    display: inline-block;
+    margin: 0 20px;
+  }
+
+  nav ul li a {
+    color: white;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 1.1rem;
+    transition: 0.3s ease;
+  }
+
+  nav ul li a:hover {
+    color: #aaa;
+  }
+
   .container {
     width: 90%;
     max-width: 1200px;
@@ -86,13 +116,13 @@
     backdrop-filter: blur(12px);
     border-radius: 20px;
     overflow: hidden;
-    box-shadow: 0 8px 26px rgba(0,0,0,0.15);
+    box-shadow: 0 8px 26px rgba(0, 0, 0, 0.15);
     transition: transform 0.35s ease, box-shadow 0.35s ease;
   }
 
   .product-card:hover {
     transform: translateY(-10px);
-    box-shadow: 0 15px 35px rgba(0,0,0,0.25);
+    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.25);
   }
 
   /* Media */
@@ -154,8 +184,18 @@
   <p>Product Promotion & Showcase</p>
 </header>
 
+<!-- 🔥 Navigation Bar Added Here -->
+<nav>
+  <ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="#featured">Featured</a></li>
+    <li><a href="#sale">Sale</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
+</nav>
+
 <div class="container">
-  <h2 class="section-title">Featured Products</h2>
+  <h2 id="featured" class="section-title">Featured Products</h2>
 
   <!-- Search Bar -->
   <div class="search-container">
@@ -180,8 +220,7 @@
       <video src="https://www.dropbox.com/scl/fi/kkexif6ogh0licixgshp0/Video-Dec-07-2025-1-51-29-PM.mp4?rlkey=se7imx0rw0ttkkhmpqejjf9qw&st=1iop8zxg&raw=1" autoplay muted loop playsinline></video>
       <div class="product-info">
         <h3>Movado</h3>
-        <p>Movado Museum Classic Men's Automatic Watch, Stainless Steel Bracelet, Self-Winding Luxury Timepiece - Gift for Him - 40mm
-</p>
+        <p>Movado Museum Classic Men's Automatic Watch, Stainless Steel Bracelet, Self-Winding Luxury Timepiece - 40mm</p>
         <a href="https://amzn.to/4awGZjC">Buy Now</a>
       </div>
     </div>
@@ -269,7 +308,7 @@
   </div>
 </div>
 
-<footer>
+<footer id="contact">
   © 2025 KhanceptDesigns – All Rights Reserved
 </footer>
 
