Replace headphones with Apple iPad Air product details

--- a/index.html
+++ b/index.html
@@ -238,11 +238,14 @@
 
     <!-- PRODUCT 4 -->
     <div class="product-card">
-      <img src="https://via.placeholder.com/400x260?text=Headphones" />
+        <div class="image-slider">
+    <img src="https://www.dropbox.com/scl/fi/bc6br0bzsatt064991vrl/Photo-Dec-07-2025-2-42-00-PM.jpg?rlkey=sxlstw56w5y480kujgvnckmkp&st=m93k8uax&raw=1" class="active" />
+    <img src="https://www.dropbox.com/scl/fi/ic9biid9wcylej3phemoz/Photo-Dec-07-2025-2-42-12-PM.jpg?rlkey=3ededgy1twm9s017wv7w4rx6a&st=lr561600&raw=1" />
+    <img src="https://www.dropbox.com/scl/fi/0g2b5mrad7ty5cuyk4oaa/Photo-Dec-07-2025-2-42-38-PM.jpg?rlkey=9vhoo31e3lxrkm2avznv8i5gh&st=h23792z7&raw=1" />
       <div class="product-info">
-        <h3>Wireless Headphones</h3>
-        <p>Noise-canceling, long battery life.</p>
-        <a href="#">Buy Now</a>
+        <h3>APPLE IPAD AIR</h3>
+        <p>Apple iPad Air 11-inch with M3 chip Built for Apple Intelligence, Liquid Retina Display, 128GB, 12MP Front/Back Camera, Wi-Fi 6E, Touch ID, All-Day Battery Life — Purple</p>
+        <a href="https://amzn.to/4pw0Rb6">Buy Now</a>
       </div>
     </div>
 
