--- a/index.html
+++ b/index.html
@@ -125,7 +125,46 @@
     box-shadow: 0 15px 35px rgba(0, 0, 0, 0.25);
   }
 
-  /* Media */
+  /* Image Slider */
+  .image-slider {
+    position: relative;
+    width: 100%;
+    height: 260px;
+    overflow: hidden;
+  }
+
+  .image-slider img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+  }
+
+  .image-slider img.active {
+    opacity: 1;
+  }
+
+  .image-slider button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: rgba(0,0,0,0.5);
+    border: none;
+    color: white;
+    font-size: 1.5rem;
+    padding: 5px 12px;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+
+  .image-slider .prev { left: 10px; }
+  .image-slider .next { right: 10px; }
+
+  /* Media & Video */
   .product-card img,
   .product-card video {
     width: 100%;
@@ -175,7 +214,6 @@
     color: white;
   }
 </style>
-
 </head>
 <body>
 
@@ -184,7 +222,6 @@
   <p>Product Promotion & Showcase</p>
 </header>
 
-<!-- 🔥 Navigation Bar Added Here -->
 <nav>
   <ul>
     <li><a href="#">Home</a></li>
@@ -207,7 +244,7 @@
 
     <!-- PRODUCT 1 -->
     <div class="product-card">
-      <video src="https://www.dropbox.com/scl/fi/6k453i98wamm9dltit1qk/Video-Dec-07-2025-1-50-56-PM.mp4?rlkey=hb8n5yfyut0nut4j6ve1rcp02&st=08rnslig&raw=1" autoplay muted loop playsinline></video>
+      <video src="https://www.dropbox.com/scl/fi/6k453i98wamm9dltit1qk/Video-Dec-07-2025-1-50-56-PM.mp4?raw=1" autoplay muted loop playsinline></video>
       <div class="product-info">
         <h3>Movado</h3>
         <p>Movado Bold Quest Automatic Watch, Swiss Self-Winding Movement, Stainless Steel Bracelet 39mm</p>
@@ -217,7 +254,7 @@
 
     <!-- PRODUCT 2 -->
     <div class="product-card">
-      <video src="https://www.dropbox.com/scl/fi/kkexif6ogh0licixgshp0/Video-Dec-07-2025-1-51-29-PM.mp4?rlkey=se7imx0rw0ttkkhmpqejjf9qw&st=1iop8zxg&raw=1" autoplay muted loop playsinline></video>
+      <video src="https://www.dropbox.com/scl/fi/kkexif6ogh0licixgshp0/Video-Dec-07-2025-1-51-29-PM.mp4?raw=1" autoplay muted loop playsinline></video>
       <div class="product-info">
         <h3>Movado</h3>
         <p>Movado Museum Classic Men's Automatic Watch, Stainless Steel Bracelet, Self-Winding Luxury Timepiece - 40mm</p>
@@ -227,24 +264,26 @@
 
     <!-- PRODUCT 3 -->
     <div class="product-card">
-      <video src="https://www.dropbox.com/scl/fi/xeji7n21uuid9d18tx0ie/Video-Dec-07-2025-2-34-31-PM.mov?rlkey=cs65m2can950idfofdkh67bgd&st=y7jxtpob&raw=1" autoplay muted loop playsinline></video>
+      <video src="https://www.dropbox.com/scl/fi/xeji7n21uuid9d18tx0ie/Video-Dec-07-2025-2-34-31-PM.mov?raw=1" autoplay muted loop playsinline></video>
       <div class="product-info">
         <h3>Apple IPAD</h3>
-        <p>Apple iPad Air 11-inch with M3 chip Built for Apple Intelligence, Liquid Retina Display, 128GB, 12MP Front/Back Camera, Wi-Fi 6E, Touch ID, All-Day Battery Life — Purple
-</p>
+        <p>Apple iPad Air 11-inch with M3 chip, Liquid Retina Display, 128GB, 12MP Front/Back Camera, Wi-Fi 6E, Touch ID</p>
         <a href="https://amzn.to/4pw0Rb6">Buy Now</a>
       </div>
     </div>
 
-    <!-- PRODUCT 4 -->
+    <!-- PRODUCT 4 WITH SLIDER -->
     <div class="product-card">
-        <div class="image-slider">
-    <img src="https://www.dropbox.com/scl/fi/bc6br0bzsatt064991vrl/Photo-Dec-07-2025-2-42-00-PM.jpg?rlkey=sxlstw56w5y480kujgvnckmkp&st=m93k8uax&raw=1" class="active" />
-    <img src="https://www.dropbox.com/scl/fi/ic9biid9wcylej3phemoz/Photo-Dec-07-2025-2-42-12-PM.jpg?rlkey=3ededgy1twm9s017wv7w4rx6a&st=lr561600&raw=1" />
-    <img src="https://www.dropbox.com/scl/fi/0g2b5mrad7ty5cuyk4oaa/Photo-Dec-07-2025-2-42-38-PM.jpg?rlkey=9vhoo31e3lxrkm2avznv8i5gh&st=h23792z7&raw=1" />
+      <div class="image-slider">
+        <img src="https://www.dropbox.com/scl/fi/bc6br0bzsatt064991vrl/Photo-Dec-07-2025-2-42-00-PM.jpg?raw=1" class="active" />
+        <img src="https://www.dropbox.com/scl/fi/ic9biid9wcylej3phemoz/Photo-Dec-07-2025-2-42-12-PM.jpg?raw=1" />
+        <img src="https://www.dropbox.com/scl/fi/0g2b5mrad7ty5cuyk4oaa/Photo-Dec-07-2025-2-42-38-PM.jpg?raw=1" />
+        <button class="prev">&#10094;</button>
+        <button class="next">&#10095;</button>
+      </div>
       <div class="product-info">
         <h3>APPLE IPAD AIR</h3>
-        <p>Apple iPad Air 11-inch with M3 chip Built for Apple Intelligence, Liquid Retina Display, 128GB, 12MP Front/Back Camera, Wi-Fi 6E, Touch ID, All-Day Battery Life — Purple</p>
+        <p>Apple iPad Air 11-inch with M3 chip, Liquid Retina Display, 128GB, 12MP Front/Back Camera, Wi-Fi 6E, Touch ID, All-Day Battery Life — Purple</p>
         <a href="https://amzn.to/4pw0Rb6">Buy Now</a>
       </div>
     </div>
@@ -316,16 +355,45 @@
   © 2025 KhanceptDesigns – All Rights Reserved
 </footer>
 
-<!-- SEARCH FILTER SCRIPT -->
+<!-- SEARCH & SLIDER SCRIPT -->
 <script>
+  // Search functionality
   document.getElementById("searchBar").addEventListener("keyup", function() {
     let filter = this.value.toLowerCase();
     let cards = document.querySelectorAll(".product-card");
-
     cards.forEach(card => {
       let text = card.innerText.toLowerCase();
       card.style.display = text.includes(filter) ? "block" : "none";
     });
+  });
+
+  // Slider functionality with auto-slide
+  document.querySelectorAll('.product-card').forEach(card => {
+    const images = card.querySelectorAll('.image-slider img');
+    const prev = card.querySelector('.prev');
+    const next = card.querySelector('.next');
+    if(!images.length) return; // Skip cards without slider
+    let current = 0;
+
+    function showImage(index) {
+      images.forEach((img, i) => img.classList.toggle('active', i === index));
+    }
+
+    // Manual arrows
+    prev.addEventListener('click', () => {
+      current = (current - 1 + images.length) % images.length;
+      showImage(current);
+    });
+    next.addEventListener('click', () => {
+      current = (current + 1) % images.length;
+      showImage(current);
+    });
+
+    // Auto-slide every 4 seconds
+    setInterval(() => {
+      current = (current + 1) % images.length;
+      showImage(current);
+    }, 4000);
   });
 </script>
 
