Replace video with image for product display

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
     <!-- PRODUCT 1 -->
 <div class="product-card">
-  <video src="https://www.dropbox.com/scl/fi/6k453i98wamm9dltit1qk/Video-Dec-07-2025-1-50-56-PM.mp4?rlkey=hb8n5yfyut0nut4j6ve1rcp02&st=08rnslig&raw=1" autoplay muted loop playsinline></video>
+  <img src="https://www.dropbox.com/scl/fi/h8gjyos4xd369h5l7a5bg/Photo-Dec-07-2025-4-41-30-PM.jpg?rlkey=ylkrpglloxr2dg6xtlli7akkw&st=f0yt0nea&raw=1" alt="Movado Watch" />
   <div class="product-info">
     <h3>Movado</h3>
     <p>Movado Bold Quest Automatic Watch, Swiss Self-Winding Movement, Stainless Steel Bracelet 39mm</p>
