Refactor price section in index.html

--- a/index.html
+++ b/index.html
@@ -267,17 +267,15 @@
     <p>Long-lasting, flawless-coverage foundation and concealer duo designed to stay in place all day. Lightweight, blendable formula with a natural matte finish.</p>
     
     <!-- PRICE SECTION -->
-    <div class="price-section" style="margin-top: 10px;">
-      <p style="font-size: 1.2rem; font-weight: 700; color: #d40000; margin: 0;">
-        $42
-      </p>
-      <a href="https://amzn.to/4rXVaEO" style="display: inline-block; margin-top: 5px; text-decoration: none; background-color: #d40000; color: #fff; padding: 8px 16px; border-radius: 4px;">
-        Buy Now
-      </a>
-    </div>
+    <p style="font-size: 1.1rem; font-weight: 700; color: #d40000; margin-top: 10px;">
+      $42
+    </p>
+
+    <a href="https://amzn.to/4rXVaEO" style="text-decoration: none; background-color: #d40000; color: #fff; padding: 8px 16px; border-radius: 4px; display: inline-block;">
+      Buy Now
+    </a>
   </div>
 </div>
-
     <!-- PRODUCT 5 -->
     <div class="product-card">
       <img src="https://via.placeholder.com/400x260?text=Bag" alt="Designer Bag" />
