--- a/index.html
+++ b/index.html
@@ -238,25 +238,21 @@
   </div>
 </div>
 
-    <!-- PRODUCT 3 -->
-    <div class="product-card">
-      <video src="https://www.dropbox.com/scl/fi/xeji7n21uuid9d18tx0ie/Video-Dec-07-2025-2-34-31-PM.mov?rlkey=cs65m2can950idfofdkh67bgd&st=y7jxtpob&raw=1" autoplay muted loop playsinline></video>
-      <div class="product-info">
-        <h3>Apple IPAD</h3>
-        <p>Apple iPad Air 11-inch with M3 chip Built for Apple Intelligence, Liquid Retina Display, 128GB, 12MP Front/Back Camera, Wi-Fi 6E, Touch ID, All-Day Battery Life — Purple</p>
-        <a href="https://amzn.to/4pw0Rb6">Buy Now</a>
-      </div>
-    </div>
-
     <!-- PRODUCT 4 -->
     <div class="product-card">
-      <img src="https://www.dropbox.com/scl/fi/bc6br0bzsatt064991vrl/Photo-Dec-07-2025-2-42-00-PM.jpg?rlkey=sxlstw56w5y480kujgvnckmkp&st=m93k8uax&raw=1" alt="APPLE IPAD AIR" />
+      <img src="https://www.dropbox.com/scl/fi/fn2iqk6dlv8urqoxc70id/Photo-Dec-07-2025-2-42-00-PM.jpg?rlkey=lqj8hdh6pr9r1nv4rky2vuvwf&st=ovmcr0yx&raw=1" alt="APPLE IPAD AIR" />
       <div class="product-info">
         <h3>APPLE IPAD AIR</h3>
         <p>Apple iPad Air 11-inch with M3 chip Built for Apple Intelligence, Liquid Retina Display, 128GB, 12MP Front/Back Camera, Wi-Fi 6E, Touch ID, All-Day Battery Life — Purple</p>
-        <a href="https://amzn.to/4pw0Rb6">Buy Now</a>
-      </div>
-    </div>
+      <!-- PRICE SECTION -->
+    <p style="font-size: 1.1rem; margin-top: 10px;">
+      <span style="text-decoration: line-through; color: #777;">$599</span>
+      <span style="color: #d40000; font-weight: 700; margin-left: 10px;">$499</span>
+    </p>
+
+    <a href="https://amzn.to/3KwQTHw">Buy Now</a>
+  </div>
+</div>
    
     <!-- PRODUCT — Stila Foundation -->
 <div class="product-card">
