Update Sale link to point to sale.html

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
   <ul>
     <li><a href="#">Home</a></li>
     <li><a href="#featured">Featured</a></li>
-    <li><a href="#sale">Sale</a></li>
+   <li><a href="sale.html">Sale</a></li>
     <li><a href="#contact">Contact</a></li>
   </ul>
 </nav>
