--- a/admin.html
+++ b/admin.html
@@ -14,6 +14,7 @@
 
   h1 {
     text-align: center;
+    font-size: 2rem;
   }
 
   .admin-box {
@@ -59,6 +60,13 @@
     margin-top: 20px;
     color: green;
     text-align: center;
+    font-weight: bold;
+    opacity: 0;
+    transition: opacity 0.4s ease;
+  }
+
+  .success-show {
+    opacity: 1 !important;
   }
 </style>
 </head>
@@ -80,8 +88,8 @@
   <label>Original Price (leave empty if no sale)</label>
   <input id="oldPrice" placeholder="Example: 149.99">
 
-  <label>Sale Price</label>
-  <input id="salePrice" placeholder="Required">
+  <label>Sale Price (required if old price exists)</label>
+  <input id="salePrice" placeholder="Example: 99.99">
 
   <label>Amazon URL / Product Link</label>
   <input id="buyLink" placeholder="https://...">
@@ -92,32 +100,53 @@
 </div>
 
 <script>
-function addProduct() {
-  const img = document.getElementById("imgUrl").value.trim();
-  const name = document.getElementById("productName").value.trim();
-  const desc = document.getElementById("productDesc").value.trim();
-  const oldPrice = document.getElementById("oldPrice").value.trim();
-  const salePrice = document.getElementById("salePrice").value.trim();
-  const link = document.getElementById("buyLink").value.trim();
+function escapeHTML(str) {
+  return str.replace(/[&<>"']/g, function(m) {
+    return ({
+      '&': '&amp;',
+      '<': '&lt;',
+      '>': '&gt;',
+      '"': '&quot;',
+      "'": '&#39;'
+    })[m];
+  });
+}
 
-  if (!img || !name || !desc || !salePrice || !link) {
-    alert("Please fill out all required fields.");
+function addProduct() {
+  const img = escapeHTML(document.getElementById("imgUrl").value.trim());
+  const name = escapeHTML(document.getElementById("productName").value.trim());
+  const desc = escapeHTML(document.getElementById("productDesc").value.trim());
+  const oldPrice = escapeHTML(document.getElementById("oldPrice").value.trim());
+  const salePrice = escapeHTML(document.getElementById("salePrice").value.trim());
+  const link = escapeHTML(document.getElementById("buyLink").value.trim());
+
+  if (!img || !name || !desc || !link) {
+    alert("Please fill out all required fields (image, name, description, link).");
     return;
   }
 
-  let isSale = oldPrice !== "";
+  if (oldPrice && !salePrice) {
+    alert("If you enter an old price, you must enter a sale price.");
+    return;
+  }
 
-  // Build product card HTML
+  if (!oldPrice && !salePrice) {
+    alert("Product must have at least a sale price.");
+    return;
+  }
+
+  const uniqueID = "prod_" + Date.now();
+
   const productHTML = `
-    <div class="product-card">
+    <div class="product-card" data-id="${uniqueID}">
       <img src="${img}" alt="${name}" />
       <div class="product-info">
         <h3>${name}</h3>
         <p>${desc}</p>
 
         <p style="font-size: 1.1rem; margin-top: 10px;">
-          ${isSale ? `<span style="text-decoration: line-through; color:#777;">$${oldPrice}</span>` : ""}
-          <span style="color:#d40000; font-weight:700; margin-left:${isSale ? "10px" : "0"};">$${salePrice}</span>
+          ${oldPrice ? `<span style="text-decoration: line-through; color:#777;">$${oldPrice}</span>` : ""}
+          <span style="color:#d40000; font-weight:700; margin-left:${oldPrice ? "10px" : "0"};">$${salePrice}</span>
         </p>
 
         <a href="${link}">Buy Now</a>
@@ -125,22 +154,22 @@ function addProduct() {
     </div>
   `;
 
-  // Save to localStorage
-  const allProducts = JSON.parse(localStorage.getItem("allProducts")) || [];
+  let allProducts = JSON.parse(localStorage.getItem("allProducts")) || [];
   allProducts.push(productHTML);
   localStorage.setItem("allProducts", JSON.stringify(allProducts));
 
-  // Auto-save sale items
-  if (isSale) {
-    const saleProducts = JSON.parse(localStorage.getItem("saleProducts")) || [];
+  if (oldPrice) {
+    let saleProducts = JSON.parse(localStorage.getItem("saleProducts")) || [];
     saleProducts.push(productHTML);
     localStorage.setItem("saleProducts", JSON.stringify(saleProducts));
   }
 
-  // Success message
-  document.getElementById("success").innerText = "Product added successfully!";
-  
-  // Clear inputs
+  const msg = document.getElementById("success");
+  msg.textContent = "✅ Product added successfully!";
+  msg.classList.add("success-show");
+
+  setTimeout(() => msg.classList.remove("success-show"), 2000);
+
   document.getElementById("imgUrl").value = "";
   document.getElementById("productName").value = "";
   document.getElementById("productDesc").value = "";
