--- a/featured.html
+++ b/featured.html
@@ -166,8 +166,8 @@
 
 <nav>
   <ul>
-    <a href="home.html">Home</a>
-    <li><a href="#featured">Featured</a></li>
+    <a href="index.html">Home</a>
+    <li><a href="featured.html">Featured</a></li>
     <li><a href="sale.html">Sale</a></li>
     <li><a href="#contact">Contact</a></li>
   </ul>
