--- a/index.html
+++ b/index.html
@@ -211,10 +211,10 @@
 <!-- NAVIGATION -->
 <nav>
   <ul>
-    <li><a href="home.html">Home</a></li>
-    <li><a href="index.html#featured">Featured</a></li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="featured.html">Featured</a></li>
     <li><a href="sale.html">Sale</a></li>
-    <li><a href="index.html#contact">Contact</a></li>
+    <li><a href="#contact">Contact</a></li>
   </ul>
 </nav>
 
