Add navigation links to the header in sale.html

--- a/sale.html
+++ b/sale.html
@@ -79,10 +79,14 @@
 <body>
 
   <!-- HEADER -->
-  <header>
+ <header>
+  <nav style="text-align:center;">
     <a href="index.html">Home</a>
-    <a href="sale.html" style="font-weight: bold; text-decoration: underline;">Sale</a>
-  </header>
+    <a href="index.html#featured">Featured</a>
+    <a href="sale.html" style="font-weight:bold; text-decoration:underline;">Sale</a>
+    <a href="index.html#contact">Contact</a>
+  </nav>
+</header>
 
   <h1 class="page-title">Sale Items</h1>
 
