--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
 <!-- NAVIGATION -->
 <nav>
   <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="featured.html">Featured</a></li>
-    <li><a href="sale.html">Sale</a></li>
+    <li><a href="/Khanceptdesign/">Home</a></li>
+    <li><a href="/Khanceptdesign/featured.html">Featured</a></li>
+    <li><a href="/Khanceptdesign/sale.html">Sale</a></li>
     <li><a href="#contact">Contact</a></li>
   </ul>
 </nav>
