--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 <!-- NAVIGATION -->
 <nav>
   <ul>
-    <li><a href="/Khanceptdesign/">Home</a></li>
+    <li><a href="/Khanceptdesign/index.html">Home</a></li>
     <li><a href="/Khanceptdesign/featured.html">Featured</a></li>
     <li><a href="/Khanceptdesign/sale.html">Sale</a></li>
     <li><a href="#contact">Contact</a></li>
