--- a/sale.html
+++ b/sale.html
@@ -80,12 +80,14 @@
 
   <!-- HEADER -->
  <header>
-  <nav style="text-align:center;">
-    <a href="index.html">Home</a>
-    <a href="index.html#featured">Featured</a>
-    <a href="sale.html" style="font-weight:bold; text-decoration:underline;">Sale</a>
-    <a href="index.html#contact">Contact</a>
-  </nav>
+ <nav>
+  <ul>
+    <li><a href="/Khanceptdesign/index.html">Home</a></li>
+    <li><a href="/Khanceptdesign/featured.html">Featured</a></li>
+    <li><a href="/Khanceptdesign/sale.html">Sale</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
+</nav>
 </header>
 
   <h1 class="page-title">Sale Items</h1>
