--- a/index.html
+++ b/index.html
@@ -3,307 +3,269 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>KhanceptDesigns – Home</title>
+<title>KhanceptDesigns – Featured Products</title>
 
+<!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
-    body {
-        margin: 0;
-        font-family: "Poppins", sans-serif;
-        background: #f4f4f4;
-    }
+  body {
+    margin: 0;
+    font-family: "Poppins", sans-serif;
+    background: linear-gradient(135deg, #f0f0f0 0%, #dcdcdc 100%);
+    color: #222;
+  }
 
-    /* HEADER */
-    header {
-        padding: 60px 20px;
-        text-align: center;
-        background: linear-gradient(135deg, #000 0%, #222 100%);
-        color: white;
-    }
+  header {
+    padding: 60px 20px;
+    text-align: center;
+    background: linear-gradient(135deg, #000 0%, #222 100%);
+    color: white;
+  }
 
-    header h1 {
-        font-size: 3rem;
-        margin: 0;
-        font-weight: 700;
-        letter-spacing: -1px;
-    }
+  header h1 {
+    font-size: 3rem;
+    margin: 0;
+    font-weight: 700;
+    letter-spacing: -1px;
+  }
 
-    nav {
-        background: #000;
-        padding: 15px 0;
-        text-align: center;
-    }
+  header p {
+    margin-top: 12px;
+    font-size: 1.2rem;
+    opacity: 0.85;
+  }
 
-    nav ul {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-    }
+  nav {
+    background: #000;
+    padding: 15px 0;
+    text-align: center;
+  }
 
-    nav ul li {
-        display: inline-block;
-        margin: 0 20px;
-    }
+  nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
 
-    nav ul li a {
-        color: white;
-        text-decoration: none;
-        font-weight: 600;
-        font-size: 1.1rem;
-    }
+  nav ul li {
+    display: inline-block;
+    margin: 0 20px;
+  }
 
-    nav ul li a:hover {
-        color: #aaa;
-    }
+  nav ul li a {
+    color: white;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 1.1rem;
+    transition: 0.3s ease;
+  }
 
-    /* ---------------- SLIDESHOW ---------------- */
-    .slideshow-container {
-        width: 100%;
-        height: 330px;
-        position: relative;
-        overflow: hidden;
-    }
+  nav ul li a:hover {
+    color: #aaa;
+  }
 
-    .slide {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        opacity: 0;
-        transition: opacity 1s ease-in-out;
-    }
+  .container {
+    width: 90%;
+    max-width: 1200px;
+    margin: 50px auto;
+  }
 
-    .slide img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
+  .section-title {
+    font-size: 2.4rem;
+    text-align: center;
+    margin-bottom: 40px;
+    font-weight: 700;
+  }
 
-    .active-slide {
-        opacity: 1;
-    }
+  .search-container {
+    width: 100%;
+    max-width: 500px;
+    margin: 0 auto 40px auto;
+  }
 
-    .arrow {
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        font-size: 40px;
-        color: white;
-        padding: 10px;
-        cursor: pointer;
-        user-select: none;
-        z-index: 10;
-        background: rgba(0,0,0,0.3);
-        border-radius: 50%;
-    }
+  #searchBar {
+    width: 100%;
+    padding: 14px 18px;
+    font-size: 1rem;
+    border-radius: 12px;
+    border: 2px solid #ccc;
+    background: white;
+    outline: none;
+    transition: 0.3s;
+  }
 
-    .arrow:hover {
-        background: rgba(0,0,0,0.6);
-    }
+  #searchBar:focus {
+    border-color: #000;
+    box-shadow: 0 0 10px rgba(0,0,0,0.15);
+  }
 
-    .arrow-left {
-        left: 15px;
-    }
+  .product-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+    gap: 35px;
+  }
 
-    .arrow-right {
-        right: 15px;
-    }
+  .product-card {
+    background: rgba(255, 255, 255, 0.65);
+    backdrop-filter: blur(12px);
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0 8px 26px rgba(0, 0, 0, 0.15);
+    transition: transform 0.35s ease, box-shadow 0.35s ease;
+  }
 
-    /* ---------------- CATEGORY GRID ---------------- */
-    .container {
-        max-width: 1200px;
-        margin: 40px auto;
-        padding: 20px;
-    }
+  .product-card:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.25);
+  }
 
-    h1.section-heading {
-        text-align: center;
-        font-weight: 700;
-        margin-bottom: 30px;
-        font-size: 2rem;
-    }
+  .product-card img,
+  .product-card video {
+    width: 100%;
+    height: 260px;
+    object-fit: contain;
+    background: #f5f5f5;
+  }
 
-    .category-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-        gap: 25px;
-    }
+  .product-info {
+    padding: 20px;
+  }
 
-    .category-tile {
-        background: white;
-        border-radius: 12px;
-        padding: 30px;
-        text-align: center;
-        font-size: 20px;
-        font-weight: 600;
-        box-shadow: 0 3px 12px rgba(0,0,0,0.1);
-        cursor: pointer;
-        transition: 0.25s ease;
-    }
+  .product-info h3 {
+    margin: 0;
+    font-size: 1.3rem;
+    font-weight: 600;
+  }
 
-    .category-tile:hover {
-        background: #eaeaea;
-        transform: translateY(-5px);
-    }
+  .product-info p {
+    margin-top: 8px;
+    font-size: 0.95rem;
+    opacity: 0.85;
+  }
 
-    .product-section {
-        display: none;
-        margin-top: 50px;
-    }
+  .product-info a {
+    display: inline-block;
+    margin-top: 14px;
+    padding: 12px 20px;
+    background: linear-gradient(135deg, #000 0%, #444 100%);
+    color: white;
+    text-decoration: none;
+    font-weight: 600;
+    border-radius: 10px;
+    transition: 0.3s;
+  }
 
-    .section-title {
-        font-size: 26px;
-        font-weight: 600;
-        margin-bottom: 20px;
-    }
+  .product-info a:hover {
+    transform: translateY(-3px);
+    background: linear-gradient(135deg, #444 0%, #000 100%);
+  }
 
-    .products {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-        gap: 25px;
-    }
-
-    .product-card {
-        background: #fff;
-        border-radius: 12px;
-        box-shadow: 0 3px 10px rgba(0,0,0,0.1);
-        padding: 15px;
-        text-align: center;
-    }
-
-    .product-card img {
-        width: 100%;
-        border-radius: 10px;
-    }
-
-    .price {
-        margin-top: 10px;
-        font-weight: 600;
-    }
-
-    .old-price {
-        text-decoration: line-through;
-        color: #888;
-        margin-right: 5px;
-    }
-
-    .back-btn {
-        margin-top: 25px;
-        display: inline-block;
-        padding: 10px 20px;
-        background: black;
-        color: white;
-        border-radius: 6px;
-        cursor: pointer;
-    }
+  footer {
+    text-align: center;
+    padding: 25px;
+    margin-top: 50px;
+    background: #111;
+    color: white;
+  }
 </style>
-</head>
 
+</head>
 <body>
 
 <header>
   <h1>KhanceptDesigns</h1>
-  <p>Shop Categories & Collections</p>
+  <p>Product Promotion & Showcase</p>
 </header>
 
-<!-- NAVIGATION -->
 <nav>
   <ul>
-    <li><a href="/Khanceptdesign/index.html">Home</a></li>
-    <li><a href="/Khanceptdesign/featured.html">Featured</a></li>
-    <li><a href="/Khanceptdesign/sale.html">Sale</a></li>
-    <li><a href="#contact">Contact</a></li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="sale.html">Sale</a></li>
   </ul>
 </nav>
 
-<!-- SLIDESHOW -->
-<div class="slideshow-container">
-    <div class="slide active-slide">
-        <img src="https://via.placeholder.com/1600x600?text=Welcome+to+KhanceptDesigns">
-    </div>
-    <div class="slide">
-        <img src="https://via.placeholder.com/1600x600?text=Shop+Our+Latest+Collections">
-    </div>
-    <div class="slide">
-        <img src="https://via.placeholder.com/1600x600?text=Exclusive+Deals+Available+Now">
-    </div>
-
-    <div class="arrow arrow-left" onclick="moveSlide(-1)">&#10094;</div>
-    <div class="arrow arrow-right" onclick="moveSlide(1)">&#10095;</div>
-</div>
-
-<!-- CATEGORY GRID -->
 <div class="container">
+  <h2 class="section-title">Featured Products</h2>
 
-    <h1 class="section-heading">Shop by Category</h1>
+  <!-- Search Bar -->
+  <div class="search-container">
+    <input type="text" id="searchBar" placeholder="Search products...">
+  </div>
 
-    <div class="category-grid">
-        <div class="category-tile" onclick="openCategory('watches')">Watches</div>
-        <div class="category-tile" onclick="openCategory('electronics')">Electronics</div>
-        <div class="category-tile" onclick="openCategory('beauty')">Beauty</div>
-        <div class="category-tile" onclick="openCategory('accessories')">Accessories</div>
+  <div class="product-grid">
+
+    <!-- PRODUCT 1 -->
+    <div class="product-card">
+      <img src="https://www.dropbox.com/scl/fi/h8gjyos4xd369h5l7a5bg/Photo-Dec-07-2025-4-41-30-PM.jpg?rlkey=ylkrpglloxr2dg6xtlli7akkw&st=f0yt0nea&raw=1" alt="Movado Watch" />
+      <div class="product-info">
+        <h3>Movado</h3>
+        <p>Movado Bold Quest Automatic Watch, Swiss Self-Winding Movement, Stainless Steel Bracelet 39mm</p>
+        <p style="font-size: 1.1rem; margin-top: 10px;">
+          <span style="text-decoration: line-through; color: #777;">$995</span>
+          <span style="color: #d40000; font-weight: 700; margin-left: 10px;">$796</span>
+        </p>
+        <a href="https://amzn.to/3KtUjL9">Buy Now</a>
+      </div>
     </div>
 
-    <div id="watches" class="product-section"></div>
-    <div id="electronics" class="product-section"></div>
-    <div id="beauty" class="product-section"></div>
-    <div id="accessories" class="product-section"></div>
+    <!-- PRODUCT 2 -->
+    <div class="product-card">
+      <img src="https://www.dropbox.com/scl/fi/p42tbv80gbtq53yhi7e45/Photo-Dec-07-2025-5-19-46-PM.jpg?rlkey=mqiekmtc76us7j60x36s325p5&st=v5os1hlb&raw=1" alt="Movado Museum Classic" />
+      <div class="product-info">
+        <h3>Movado</h3>
+        <p>Movado Museum Classic Men's Automatic Watch, Stainless Steel Bracelet, Self-Winding Luxury Timepiece - 40mm</p>
+        <p style="font-size: 1.1rem; margin-top: 10px;">
+          <span style="text-decoration: line-through; color: #777;">$1495</span>
+          <span style="color: #d40000; font-weight: 700; margin-left: 10px;">$1196</span>
+        </p>
+        <a href="https://amzn.to/4awGZjC">Buy Now</a>
+      </div>
+    </div>
 
+    <!-- PRODUCT 4 -->
+    <div class="product-card">
+      <img src="https://www.dropbox.com/scl/fi/fn2iqk6dlv8urqoxc70id/Photo-Dec-07-2025-2-42-00-PM.jpg?rlkey=lqj8hdh6pr9r1nv4rky2vuvwf&st=ovmcr0yx&raw=1" alt="APPLE IPAD AIR" />
+      <div class="product-info">
+        <h3>APPLE IPAD AIR</h3>
+        <p>Apple iPad Air 11-inch with M3 chip Built for Apple Intelligence, Liquid Retina Display, 128GB, 12MP Front/Back Camera, Wi-Fi 6E, Touch ID, All-Day Battery Life — Purple</p>
+        <p style="font-size: 1.1rem; margin-top: 10px;">
+          <span style="text-decoration: line-through; color: #777;">$599</span>
+          <span style="color: #d40000; font-weight: 700; margin-left: 10px;">$499</span>
+        </p>
+        <a href="https://amzn.to/3KwQTHw">Buy Now</a>
+      </div>
+    </div>
+
+    <!-- PRODUCT — Stila Foundation -->
+    <div class="product-card">
+      <img src="https://www.dropbox.com/scl/fi/zl82k7qdq0maoy03k30hv/Photo-Dec-07-2025-5-44-08-PM.jpg?rlkey=keaxx7w7rvk9l9kstrq2zi908&st=6jsdb82m&raw=1" alt="Stila Stay All Day Foundation & Concealer">
+      <div class="product-info">
+        <h3>Stila Stay All Day Foundation & Concealer</h3>
+        <p>Long-lasting, flawless-coverage foundation and concealer duo designed to stay in place all day. Lightweight, blendable formula with a natural matte finish.</p>
+        <p style="font-size: 1.1rem; font-weight: 700; color: #d40000; margin-top: 10px;">$42</p>
+        <a href="https://amzn.to/4rXVaEO">Buy Now</a>
+      </div>
+    </div>
+
+  </div>
 </div>
 
+<footer>
+  © 2025 KhanceptDesigns – All Rights Reserved
+</footer>
+
+<!-- SEARCH FILTER SCRIPT -->
 <script>
-/* SLIDESHOW */
-let slideIndex = 0;
-let slides = document.querySelectorAll(".slide");
+  document.getElementById("searchBar").addEventListener("keyup", function() {
+    let filter = this.value.toLowerCase();
+    let cards = document.querySelectorAll(".product-card");
 
-function showSlide(index) {
-    slides.forEach(s => s.classList.remove("active-slide"));
-    slides[index].classList.add("active-slide");
-}
-
-function moveSlide(direction) {
-    slideIndex = (slideIndex + direction + slides.length) % slides.length;
-    showSlide(slideIndex);
-}
-
-setInterval(() => moveSlide(1), 4000);
-
-/* CATEGORY LOADING */
-const allProducts = JSON.parse(localStorage.getItem("allProducts")) || [];
-
-function openCategory(name) {
-    document.querySelectorAll(".product-section").forEach(s => s.style.display = "none");
-    document.querySelector(".category-grid").style.display = "none";
-
-    const section = document.getElementById(name);
-    section.innerHTML = `<div class='section-title'>${name.toUpperCase()}</div>`;
-
-    const list = allProducts.filter(p => p.toLowerCase().includes(name.toLowerCase()));
-    
-    const wrapper = document.createElement("div");
-    wrapper.className = "products";
-
-    list.forEach(html => {
-        const div = document.createElement("div");
-        div.innerHTML = html;
-        wrapper.appendChild(div);
+    cards.forEach(card => {
+      let text = card.innerText.toLowerCase();
+      card.style.display = text.includes(filter) ? "block" : "none";
     });
-
-    section.appendChild(wrapper);
-
-    const back = document.createElement("div");
-    back.className = "back-btn";
-    back.innerText = "Back to Categories";
-    back.onclick = () => {
-        section.style.display = "none";
-        document.querySelector(".category-grid").style.display = "grid";
-    };
-
-    section.appendChild(back);
-    section.style.display = "block";
-}
+  });
 </script>
 
 </body>
