--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <input type="text" id="searchBar" placeholder="Search products...">
   </div>
 
-  <div class="product-grid">
+  <div class="product-grid" id="homeProductGrid"></div>
 
     <!-- PRODUCT 1 -->
     <div class="product-card">
@@ -268,7 +268,28 @@
       card.style.display = text.includes(filter) ? "block" : "none";
     });
   });
-</script>
+<script>
+const homeGrid = document.getElementById("homeProductGrid");
+const allProducts = JSON.parse(localStorage.getItem("allProducts")) || [];
 
+if (allProducts.length === 0) {
+  homeGrid.innerHTML = `<p style="text-align:center; font-size:1.2rem; padding: 50px;">
+    No products available yet. Please add products in the Admin Editor.
+  </p>`;
+} else {
+  homeGrid.innerHTML = allProducts.join("");
+}
+
+// Live Search
+document.getElementById("searchBar").addEventListener("keyup", function() {
+  let filter = this.value.toLowerCase();
+  let cards = homeGrid.querySelectorAll(".product-card");
+
+  cards.forEach(card => {
+    let text = card.innerText.toLowerCase();
+    card.style.display = text.includes(filter) ? "block" : "none";
+  });
+});
+</script>
 </body>
 </html>
