--- a/sale.html
+++ b/sale.html
@@ -168,6 +168,7 @@
   <h2 class="section-title">Sale Products</h2>
 
   <div class="product-grid" id="saleGrid"></div>
+</div>
 
     <!-- PRODUCT 1 -->
     <div class="product-card">
