--- a/sale.html
+++ b/sale.html
@@ -9,7 +9,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
-  /* Same CSS as index.html for consistency */
   body {
     margin: 0;
     font-family: "Poppins", sans-serif;
@@ -82,7 +81,7 @@
   .product-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-    gap: 35px;
+    gap: 40px; /* spacing between cards */
   }
 
   .product-card {
@@ -92,6 +91,9 @@
     overflow: hidden;
     box-shadow: 0 8px 26px rgba(0, 0, 0, 0.15);
     transition: transform 0.35s ease, box-shadow 0.35s ease;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 
   .product-card:hover {
@@ -157,7 +159,7 @@
 
 <nav>
   <ul>
-    <li><a href="#featured">Home</a></li>
+    <li><a href="index.html">Home</a></li>
     <li><a href="index.html">Featured</a></li>
     <li><a href="sale.html">Sale</a></li>
     <li><a href="#contact">Contact</a></li>
@@ -166,54 +168,9 @@
 
 <div class="container">
   <h2 class="section-title">Sale Products</h2>
-
   <div class="product-grid" id="saleGrid"></div>
 </div>
 
-    <!-- PRODUCT 1 -->
-    <div class="product-card">
-      <img src="https://www.dropbox.com/scl/fi/h8gjyos4xd369h5l7a5bg/Photo-Dec-07-2025-4-41-30-PM.jpg?rlkey=ylkrpglloxr2dg6xtlli7akkw&st=f0yt0nea&raw=1" alt="Movado Watch" />
-      <div class="product-info">
-        <h3>Movado</h3>
-        <p>Movado Bold Quest Automatic Watch, Swiss Self-Winding Movement, Stainless Steel Bracelet 39mm</p>
-        <p style="font-size: 1.1rem; margin-top: 10px;">
-          <span style="text-decoration: line-through; color: #777;">$995</span>
-          <span style="color: #d40000; font-weight: 700; margin-left: 10px;">$796</span>
-        </p>
-        <a href="https://amzn.to/3KtUjL9">Buy Now</a>
-      </div>
-    </div>
-  
-
-    <!-- PRODUCT 2 -->
-    <div class="product-card">
-      <img src="https://www.dropbox.com/scl/fi/p42tbv80gbtq53yhi7e45/Photo-Dec-07-2025-5-19-46-PM.jpg?rlkey=mqiekmtc76us7j60x36s325p5&st=v5os1hlb&raw=1" alt="Movado Museum Classic" />
-      <div class="product-info">
-        <h3>Movado</h3>
-        <p>Movado Museum Classic Men's Automatic Watch, Stainless Steel Bracelet, Self-Winding Luxury Timepiece - 40mm</p>
-        <p style="font-size: 1.1rem; margin-top: 10px;">
-          <span style="text-decoration: line-through; color: #777;">$1495</span>
-          <span style="color: #d40000; font-weight: 700; margin-left: 10px;">$1196</span>
-        </p>
-        <a href="https://amzn.to/4awGZjC">Buy Now</a>
-      </div>
-    </div>
-
-  
-    <!-- PRODUCT 4 -->
-    <div class="product-card">
-      <img src="https://www.dropbox.com/scl/fi/fn2iqk6dlv8urqoxc70id/Photo-Dec-07-2025-2-42-00-PM.jpg?rlkey=lqj8hdh6pr9r1nv4rky2vuvwf&st=ovmcr0yx&raw=1" alt="APPLE IPAD AIR" />
-      <div class="product-info">
-        <h3>APPLE IPAD AIR</h3>
-        <p>Apple iPad Air 11-inch with M3 chip Built for Apple Intelligence, Liquid Retina Display, 128GB, 12MP Front/Back Camera, Wi-Fi 6E, Touch ID, All-Day Battery Life — Purple</p>
-        <p style="font-size: 1.1rem; margin-top: 10px;">
-          <span style="text-decoration: line-through; color: #777;">$599</span>
-          <span style="color: #d40000; font-weight: 700; margin-left: 10px;">$499</span>
-        </p>
-        <a href="https://amzn.to/3KwQTHw">Buy Now</a>
-      </div>
-    </div>
-  
 <footer>
   © 2025 KhanceptDesigns – All Rights Reserved
 </footer>
@@ -222,12 +179,16 @@
   const saleGrid = document.getElementById("saleGrid");
   const saleProducts = JSON.parse(localStorage.getItem("saleProducts")) || [];
 
-  if(saleProducts.length === 0){
-    saleGrid.innerHTML = `<p style="text-align:center; padding:50px;">No sale items yet.</p>`;
+  if (saleProducts.length === 0) {
+    saleGrid.innerHTML = `<p style="text-align:center; font-size:1.2rem; padding:50px;">
+      No sale items yet. Add products in the Admin Editor.
+    </p>`;
   } else {
-    saleGrid.innerHTML = saleProducts.join("");
+    // Remove duplicates if any
+    const uniqueProducts = [...new Set(saleProducts)];
+    saleGrid.innerHTML = uniqueProducts.join("");
   }
 </script>
+
 </body>
 </html>
-    
